# pyproject-api

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.cfg  tox.ini  tox.toml  whitelist.txt
.github/: FUNDING.yaml  FUNDING.yml
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
docs/: api.rst  changelog.rst  conf.py  index.rst
src/pyproject_api/: __init__.py  __main__.py  _backend.py  _backend.pyi  _frontend.py  _via_fresh_subprocess.py
tests/: test_backend.py  test_fronted.py  test_frontend.py  test_frontend_setuptools.py  test_main.py  test_util.py  test_version.py
tests/demo_pkg_inline/: build.py  build.pyi  pyproject.toml
