[metadata]
name = pyproject_api
description = API to interact with the python pyproject.toml based projects
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pyproject-api.readthedocs.org
author = Bern치t G치bor
author_email = gaborjbernat@gmail.com
maintainer = Bern치t G치bor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/tox-dev/pyproject-api
    Tracker=https://github.com/tox-dev/pyproject-api/issues

[options]
packages = find:
install_requires =
    packaging
    tomli>=1.2
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
docs =
    furo>=2021.8.17b43
    sphinx>=4.1
    sphinx-autodoc-typehints>=1.12
testing =
    covdefaults>=2
    pytest>=6.2
    pytest-cov>=3
    pytest-mock>=3.6
    importlib-metadata>=4.6.1;python_version<"3.8"

[options.package_data]
pyproject_api = py.typed

[mypy]
python_version = 3.8
