[metadata]
name = pyproject_api
description = API to interact with the python pyproject.toml based projects
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pyproject-api.readthedocs.org
author = Bern치t G치bor
author_email = gaborjbernat@gmail.com
maintainer = Bern치t G치bor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/tox-dev/pyproject-api
    Tracker=https://github.com/tox-dev/pyproject-api/issues

[options]
packages = find:
install_requires =
    packaging>=21.3
    tomli>=2.0.1
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
docs =
    furo>=2022.6.21
    sphinx>=5.1.1
    sphinx-autodoc-typehints>=1.19.1
testing =
    covdefaults>=2.2
    pytest>=7.1.2
    pytest-cov>=3
    pytest-mock>=3.8.2
    importlib-metadata>=4.12;python_version < "3.8"

[options.package_data]
pyproject_api = py.typed

[flake8]
max-complexity = 22
max-line-length = 120
noqa-require-code = true
dictionaries = en_US,python,technical,django
ignore = E203, W503

[pep8]
max-line-length = 120
